--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,11 @@ authors = [
     { name = "Saswat Priyadarshan", email = "psaswat21@gmail.com" }
 ]
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.10"
 license = { text = "MIT" }
 dependencies = [
+    "httpx>=0.28.1",
+    "mcp[cli]>=1.13.1",
     "mypy>=1.14.1",
     "openai>=1.106.1",
     "pydantic>=2.10.6",
